--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jotfor.ms/s/umd/f7ff201eaa7/for-pdfimporter-patch.js" type="text/javascript"></script>
     <script src="https://cdn.jotfor.ms/s/static/4c4c8fda890/js/vendor/smoothscroll.min.js" type="text/javascript"></script>
     <script src="https://cdn.jotfor.ms/s/static/4c4c8fda890/js/errorNavigation.js" type="text/javascript"></script>
+    <script src="https://js.jotform.com/JotForm.js"></script>
     <script type="text/javascript">
       JotForm.newDefaultTheme = true;
       JotForm.extendsNewTheme = false;
